--- a/.parcelrc
+++ b/.parcelrc
@@ -1,12 +1,9 @@
 {
-  "extends": "@parcel/config-default",
-  "transformers": {
-    "*.hbs": ["@parcel/transformer-handlebars"]
-  },
-
+  "extends": [
+    "@parcel/config-default"
+  ],
   "reporters": [
     "...",
     "parcel-reporter-clean-dist"
   ]
 }
-
