--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "test-fetch",
+  "name": "js-hw-12.1",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Malk0v.github.io/testFetch",
+  "homepage": "https://Malk0v.github.io/js-hw-12.1",
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/index.html --public-url /testFetch/",
+    "build": "parcel build src/*.html --public-url /js-hw-12.1/",
     "deploy": "gh-pages -d dist",
     "predeploy": "npm run build"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Malk0v/testFetch.git"
+    "url": "git+https://github.com/Malk0v/js-hw-12.1.git"
   },
   "keywords": [],
-  "author": "Anton Malkov antonio.izym@gmai.com",
+  "author": "Anton Malkov <antonio.izym@gmai.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Malk0v/testFetch/issues"
+    "url": "https://github.com/Malk0v/js-hw-12.1/issues"
   },
   "dependencies": {
+    "@parcel/transformer-sass": "^2.6.0",
     "gh-pages": "^5.0.0",
     "modern-normalize": "^1.1.0",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
